03_basics_kubenetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-simple-deploy
  labels:
    app: kuber-dp
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: app-http-simple
          image: guronn/otus_service:v7
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8000
