03_basics_kubenetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-simple-service
spec:
  selector:
      env: prod
  ports:
    - port: 2000
      protocol: TCP
      targetPort: 8000
  type: ClusterIP
