03_basics_kubenetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: app-ingress
  labels:
    app: http-simple-rs
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/[A-Z0-9]{1,}/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: http-simple-service
                port:
                  number: 2000
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: http-simple-service
                port:
                  number: 2000
